environments/cluster1/mesh-config/active/hipstershop-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hipstershop-frontend-vs
  namespace: hipstershop
spec:
  gateways:
  - hipstershop-gateway
  hosts:
  - '*'
  http:
  - #match:
    #- uri:
    #    exact: "/"
    #rewrite:
    #  uri: "/"
    route:
    - destination:
        host: frontend
        port:
          number: 80
